<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    tools:context=".TakePhotoActivity">

    <TextView
        android:id="@+id/text_view_use_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/use_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_view_use_camera">

        <TextView
            android:id="@+id/text_view_subtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/subtext">
        </TextView>

        <TextView
            android:id="@+id/text_view_turn_on"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:onClick="changeMindAndTurnOnCamera"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:text="@string/turn_on"
            android:layout_below="@id/text_view_subtext">
        </TextView>
    </LinearLayout>
</LinearLayout>