<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.ericyuegu.whaddyahavin.auth.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorSecondary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:background="@color/colorSecondary">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingLeft="75dp"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/white">


            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:fontFamily="sans-serif"
                android:foregroundTint="@color/white"
                android:hint="@string/old_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="18dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="100dp">

            <EditText
                android:id="@+id/newpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="18dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/resetpassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif"
                android:hint="@string/reenter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="18dp" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="sans-serif"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="18dp"/>

    </RelativeLayout>



</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:fitsSystemWindows="true"-->
    <!--tools:context="com.ericyuegu.whaddyahavin.auth.ResetPasswordActivity">-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="@dimen/activity_horizontal_margin">-->


        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:hint="@string/hint_email"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:textColor="@color/colorSecondary"-->
                <!--android:textColorHint="@color/colorSecondary"-->
                <!--android:textColorHighlight="@color/textHighlightColor" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash; Login Button &ndash;&gt;-->

        <!--<Button-->
            <!--android:id="@+id/btn_reset_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:text="@string/btn_reset_password"-->
            <!--android:textColor="@android:color/black" />-->

        <!--<Button-->
            <!--android:id="@+id/btn_back"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_back"-->
            <!--android:textColor="@color/colorAccent" />-->

    <!--</LinearLayout>-->

    <!--<ProgressBar-->
        <!--android:id="@+id/progressBar"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="center|bottom"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:visibility="gone" />-->
<!--</android.support.design.widget.CoordinatorLayout>-->